force-app/main/default/objects/Int_Collateral_Agreement__c/Int_Collateral_Agreement__c.object-meta.xml
<CustomObject>
    <description>Int Junction Object for Collateral &amp; Agreement objects.</description>
    <label>Int Collateral Agreement</label>
    <nameField>
        <displayFormat>CAI-{00000000}</displayFormat>
        <label>Collateral Agreement Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Collaterals Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>