force-app/main/default/objects/Int_Collateral_Agreement__c/fields/Collateral_Name__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Collateral Name</description>
    <label>Collateral Name</label>
    <referenceTo>Int_Collateral__c</referenceTo>
    <relationshipLabel>Int Collaterals Agreements</relationshipLabel>
    <relationshipName>Int_Collaterals_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>