force-app/main/default/objects/Int_Collateral_Agreement__c/fields/Collateral_Number__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Number__c</fullName>
    <description>Collateral Number</description>
    <label>Collateral Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>