force-app/main/default/objects/Int_Collateral_Agreement__c/fields/Collateral_Type__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Type__c</fullName>
    <description>Collateral Type</description>
    <label>Collateral Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>