force-app/main/default/objects/Int_Collateral_Agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Committed__c</columns>
    <columns>Agreement_Source_System__c</columns>
    <columns>Agreement_Number__c</columns>
    <columns>Collateral_Source_System__c</columns>
    <columns>Collateral_Number__c</columns>
    <columns>Collateral_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>